Fix: Item group headings clipped

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,7 +11,8 @@ body {
 	transition: all 0.2s linear;
 }
 body, html {
-	height: 100%;
+    height: 100%;
+    margin: 0;
 }
 body, html, a, button {
 	cursor: pointer;
@@ -291,8 +292,8 @@ $desktop-lg: 1920px;
 	margin-bottom: 20px;
 	overflow: hidden;
 	&.collapsed {
-		height: 30px;
-		margin-bottom: 5px;
+		height: 44px;
+	    margin-bottom: 0;
 		h3:before {
 			transform: rotate(-90deg);
 		}
